Fixed a layout issue on IE 7

--- a/sass/browserhacks-ie.scss
+++ b/sass/browserhacks-ie.scss
@@ -142,3 +142,11 @@ section > div {
 * + html body {
 	overflow: visible;
 }
+
+* + html section[data-cols='2'] > div {
+	width: 48%;
+
+	h2 {
+		font-size: 1.7em;
+	}
+}
